vX.Y.Z (YYYY-MM-DD)

- Fix post-process unit test for sqlite3
- Remove SAPDB support

v0.61.0 (2024-03-14)

- Support TOML configuration files for executing tests with `run` script
- Update `run` script to use PID files to stop processes instead of killall
  with program names
- Refactor `run` script output
- Reorganize documentation

v0.60.0 (2024-02-29)

- driver3 will now continually attempt to retry connecting to the database
  for the duration of the test if the database connectivity code returns a
  RECONNECT code
- libpq interface now returns a RECONNECT code if a PGRES_FATAL_ERROR is
  returned from any database call
- Add -retry-delay flag to driver3 to adjust the delay between
- Remove lingering hard coded fontconfig path from AppImage
- Fix check for existing database in pgsql-create-db
- Use CREATE DATABASE SQL statement instead of createdb binary in
  pgsql-create-db
- Use VACUUM SQL statement insetead of vacuumdb binary in pgsql-build-db
- Remove unnecessary binaries from AppImage
- Create AppImage on Debian 10 (buster), previously Ubuntu 14.04 (Trust Tahr)
- Bump minimum CMake version to 3.5 per deprecation warnings
- Use Linux system call to get thread id instead of using the thread's address
- Fix `run` script execution of stats and profile collection for 1-tier tests
- Add --row-per-commit to datagen to control the number of rows loaded before
  committing when directly loading a database

v0.53.10 (2024-02-22)

- Fix pgsql-load-db to not start multiple processes for single partition data
  loading, which weren't doing anything
- Parallelize some of the plotting in the generate-report and pgsql-report
  scripts
- psql: run TRUNCATE and COPY within a transaction if data is not partitioned
- Use linuxdeploy to create AppImage
- Build gnuplot explicitly disabling unnecessary options for AppImage
- Now only installing psql into AppImage
- Install touchstone-tools v0.7.3 into AppImage
- Remove `activate` script in favor of just executing AppRun