@@ -21,6 +21,9 @@ Options:
   -l PORT        PostgreSQL PORT
   -p PARAMTERS   PostgreSQL database PARAMETERS
   -r             drop existing database before building a new database
+  --rows-per-commit ROWS
+                 number of ROWS to load per transaction, default is to load all
+                 data in a single transaction
   -s TYPE        user defined functions TYPE to install 'c' or 'plpgsql',
                  default: plpgsql
   -t             use tablespaces
@@ -36,8 +39,10 @@ EOF
 
 WAREHOUSES=1
 GENERATE_DATAFILE=0
+LOADARGS=""
 PRIVILEGED=0
 REBUILD_DB=0
+ROWS_PER_COMMIT=0
 UDF_TYPE="plpgsql"
 VACUUM_FULL=0
 
@@ -57,6 +62,13 @@ while [ "${#}" -gt 0 ] ; do
 	(-p)
 		shift
 		PARAMETERS="${1}"
+		;;
+	(--rows-per-commit)
+		shift
+		ROWS_PER_COMMIT="${1}"
+		;;
+	(--rows-per-commit=?*)
+		ROWS_PER_COMMIT="${1#*--rows-per-commit=}"
 		;;
 	(-r)
 		REBUILD_DB=1
@@ -103,6 +115,10 @@ if [ ! "x${PORT}" = "x" ]; then
 	PORTARG="-l ${PORT}"
 fi
 
+if [ "${ROWS_PER_COMMIT}" -gt 0 ]; then
+	LOADARGS="--rows-per-commit=${ROWS_PER_COMMIT}"
+fi
+
 if [ $REBUILD_DB -eq 1 ] && [ -d $DBT2PGDATA ]; then
 	if [ $PRIVILEGED -eq 1 ]; then
 		echo "Restarting the database to reset database parameters..."
@@ -126,7 +142,8 @@ SEED=$(dbt2 rand 1 18446744073709551615 0)
 export PGPORT="${PORT}"
 export PGDATABASE="${DBT2DBNAME}"
 
-eval "dbt2 pgsql-load-db ${PORTARG} -s ${SEED} -w ${WAREHOUSES}" || exit 1
+eval "dbt2 pgsql-load-db ${PORTARG} -s ${SEED} -w ${WAREHOUSES} ${LOADARGS}" \
+		|| exit 1
 eval "dbt2 pgsql-create-indexes ${PORTARG} ${TABLESPACES_FLAG}" || exit 1
 eval "dbt2 pgsql-load-stored-procs ${SHAREDIRARG} ${PORTARG} -t ${UDF_TYPE}" \
 		|| exit 1
