@@ -24,6 +24,9 @@ Options:
   -l PORT        PostgreSQL PORT
   -p LIST        Sepecific LIST of parttitions to load, e.g. \"1 2\",
                  default: all
+  --rows-per-commit ROWS
+                 number of ROWS to load per transaction, default is to load all
+                 data in a single transaction
   -s INTEGER     set random number generation seed
   -t PARTITIONS  total number of data PARTITIONS, default: detected number of
                  processors
@@ -34,6 +37,7 @@ Options:
 EOF
 }
 
+ROWS_PER_COMMIT=0
 SEED=""
 WAREHOUSES=1
 while [ "${#}" -gt 0 ] ; do
@@ -45,6 +49,13 @@ while [ "${#}" -gt 0 ] ; do
 	(-p)
 		shift
 		PART_CURRENT="${1}"
+		;;
+	(--rows-per-commit)
+		shift
+		ROWS_PER_COMMIT="${1}"
+		;;
+	(--rows-per-commit=?*)
+		ROWS_PER_COMMIT="${1#*--rows-per-commit=}"
 		;;
 	(-s)
 		shift
@@ -76,6 +87,10 @@ done
 
 if [ ! "x${PORT}" = "x" ]; then
 	PORTARG="-p ${PORT}"
+fi
+
+if [ "${ROWS_PER_COMMIT}" -gt 0 ]; then
+	DATAGENARGS="--rows-per-commit=${ROWS_PER_COMMIT}"
 fi
 
 PSQL="psql -X ${PORTARG} -d ${DBT2DBNAME}"
@@ -137,8 +152,8 @@ run_datagen()
 	WAREHOUSES=$4
 	SEED=$5
 
-	dbt2 datagen --direct -w "${WAREHOUSES}" --pgsql --table "${TABLE}" \
-			--seed "${SEED}" -P "${TOTAL}" -p "${PART}"
+	eval dbt2 datagen --direct -w "${WAREHOUSES}" --pgsql --table "${TABLE}" \
+			--seed "${SEED}" -P "${TOTAL}" -p "${PART}" "${DATAGENARGS}"
 	if [ $? -ne 0 ]; then
 		echo "ERROR: datagen couldn't load part $PART of $TOTAL with $TABLE"
 		exit 1
